prototype pachyderm integration

--- a/.dockerignore
+++ b/.dockerignore
@@ -4,6 +4,8 @@
 # Except:
 !deploy/docker-entrypoint.d/**
 !deploy/docker-entrypoint.sh
+!deploy/init-pachyderm.sh
+!deploy/prebuild_wo_frontend.sh
 !deploy/requirements-mw.txt
 !deploy/requirements.txt
 !deploy/heroku_run.sh
